authz/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: authz
  name: authz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authz
  template:
    metadata:
      labels:
        app: authz
      name: authz
    spec:
      containers:
      - image: erfangc/authz:latest
        imagePullPolicy: IfNotPresent
        name: authz
      restartPolicy: Always
