authz/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authz
spec:
  selector:
    app: authz
  ports:
    - port: 3000
  type: NodePort
